5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1601_2426.log
== SUBMITION (2019-03-23 10:31:56) 
-- CODE:
t=float(input())
v=float(input()
		  
d=t*v
q=d/12
print(d)
print(q)
-- EXECUTION TIME:
0.124995
-- ERROR:
  File "/home/codebench/codes/1601/2426/main.py", line 4
    d=t*v
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:32:12) 
-- CODE:
t=float(input())
v=float(input()
		  
d=t*v
q=d/12
print(d)
print(q)
-- ERROR:
File "XXXX", line 4
    d=t*v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:32:53) 
-- CODE:
t=float(input())
v=float(input()
		  
d = (t*v)
q=d/12
print(d)
print(q)
-- ERROR:
File "XXXX", line 4
    d = (t*v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:33:13) 
-- CODE:
t=float(input())
v=float(input())
		  
d = (t*v)
q=d/12
print(d)
print(q)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:33:36) 
-- CODE:
t=float(input())
v=float(input())
		  
d = (t*v)
q=d/12
print(d)
print(q)
-- EXECUTION TIME:
0.166559
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
